Fix layout issues

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,4 +1,7 @@
+html,
 body {
 	margin: 0;
-	min-height: 100vh;
+	height: 100%;
+	max-height: 100%;
+	width: 100%;
 }
